feat: move secret to header
