# pkg/docs/swagger.json
@@ -77,9 +77,6 @@
         "/{path}/disable": {
             "patch": {
                 "description": "Disables the link with the given path and secret. Idempotent.",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -96,13 +93,11 @@
                         "required": true
                     },
                     {
-                        "description": "Secret",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/AdminRequest"
-                        }
+                        "type": "string",
+                        "description": "Bearer token containing admin secret",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -112,11 +107,11 @@
                             "$ref": "#/definitions/LinkResponse"
                         }
                     },
-                    "400": {
-                        "description": "Invalid request."
+                    "401": {
+                        "description": "Invalid admin secret."
                     },
                     "404": {
-                        "description": "Link not found or wrong secret."
+                        "description": "Link not found."
                     }
                 }
             }
@@ -143,12 +138,19 @@
                         "required": true
                     },
                     {
-                        "description": "Secret and new target URL",
+                        "type": "string",
+                        "description": "Bearer token containing admin secret",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "Target URL",
                         "name": "body",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/EditLinkRequest"
+                            "$ref": "#/definitions/ShortenLinkRequest"
                         }
                     }
                 ],
@@ -162,8 +164,11 @@
                     "400": {
                         "description": "Invalid request."
                     },
+                    "401": {
+                        "description": "Invalid admin secret."
+                    },
                     "404": {
-                        "description": "Link not found or wrong secret."
+                        "description": "Link not found."
                     }
                 }
             }
@@ -171,9 +176,6 @@
         "/{path}/enable": {
             "patch": {
                 "description": "Enables the link with the given path and secret. Idempotent.",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -190,13 +192,11 @@
                         "required": true
                     },
                     {
-                        "description": "Secret",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/AdminRequest"
-                        }
+                        "type": "string",
+                        "description": "Bearer token containing admin secret",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -206,52 +206,17 @@
                             "$ref": "#/definitions/LinkResponse"
                         }
                     },
-                    "400": {
-                        "description": "Invalid request."
+                    "401": {
+                        "description": "Invalid admin secret."
                     },
                     "404": {
-                        "description": "Link not found or wrong secret."
+                        "description": "Link not found."
                     }
                 }
             }
         }
     },
     "definitions": {
-        "AdminRequest": {
-            "type": "object",
-            "required": [
-                "secret"
-            ],
-            "properties": {
-                "secret": {
-                    "description": "The secret key for managing the link.",
-                    "type": "string",
-                    "format": "uuid",
-                    "example": "bcc9a044-918a-4ffa-ae4b-75274ca23668"
-                }
-            }
-        },
-        "EditLinkRequest": {
-            "type": "object",
-            "required": [
-                "secret",
-                "url"
-            ],
-            "properties": {
-                "secret": {
-                    "description": "The secret key for managing the link.",
-                    "type": "string",
-                    "format": "uuid",
-                    "example": "bcc9a044-918a-4ffa-ae4b-75274ca23668"
-                },
-                "url": {
-                    "description": "The target URL to shorten.",
-                    "type": "string",
-                    "format": "url",
-                    "example": "https://www.google.com"
-                }
-            }
-        },
         "LinkResponse": {
             "type": "object",
             "required": [
